Updated aastex class template to version 6.1. Added references to python packages and aastex.

--- a/template.bib
+++ b/template.bib
@@ -1,4 +1,42 @@
+@misc{AASteam2016aastex61,
+  author       = {AAS Journals Team and
+                  Hendrickson, Amy},
+  title        = {AASJournals/AASTeX60: Version 6.1},
+  month        = nov,
+  year         = 2016,
+  doi          = {10.5281/zenodo.168228},
+  url          = {https://doi.org/10.5281/zenodo.168228}
+}
 
+@ARTICLE{Astropy2013aaAstroPy,
+  author = {{Astropy Collaboration} and {Robitaille}, T.~P. and {Tollerud}, E.~J. and
+        {Greenfield}, P. and {Droettboom}, M. and {Bray}, E. and {Aldcroft}, T. and
+        {Davis}, M. and {Ginsburg}, A. and {Price-Whelan}, A.~M. and
+        {Kerzendorf}, W.~E. and {Conley}, A. and {Crighton}, N. and
+        {Barbary}, K. and {Muna}, D. and {Ferguson}, H. and {Grollier}, F. and
+        {Parikh}, M.~M. and {Nair}, P.~H. and {Unther}, H.~M. and {Deil}, C. and
+        {Woillez}, J. and {Conseil}, S. and {Kramer}, R. and {Turner}, J.~E.~H. and
+        {Singer}, L. and {Fox}, R. and {Weaver}, B.~A. and {Zabalza}, V. and
+        {Edwards}, Z.~I. and {Azalee Bostroem}, K. and {Burke}, D.~J. and
+        {Casey}, A.~R. and {Crawford}, S.~M. and {Dencheva}, N. and
+        {Ely}, J. and {Jenness}, T. and {Labrie}, K. and {Lim}, P.~L. and
+        {Pierfederici}, F. and {Pontzen}, A. and {Ptak}, A. and {Refsdal}, B. and
+        {Servillat}, M. and {Streicher}, O.},
+   title = "{Astropy: A community Python package for astronomy}",
+ journal = {\aap},
+archivePrefix = "arXiv",
+  eprint = {1307.6212},
+primaryClass = "astro-ph.IM",
+keywords = {methods: data analysis, methods: miscellaneous, virtual observatory tools},
+    year = 2013,
+   month = oct,
+  volume = 558,
+     eid = {A33},
+   pages = {A33},
+     doi = {10.1051/0004-6361/201322068},
+  adsurl = {http://adsabs.harvard.edu/abs/2013A\%26A...558A..33A},
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 2013ApJ...779....5B
 @ARTICLE{BlecicEtal2013apjWASP14b,
@@ -143,6 +181,29 @@ key: reviewed author submitted
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@Article{Hunter2007ieeeMatplotlib,
+  Author    = {Hunter, J. D.},
+  Title     = {Matplotlib: A 2D graphics environment},
+  Journal   = {Computing In Science \& Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {90--95},
+  abstract  = {Matplotlib is a 2D graphics package used for Python
+  for application development, interactive scripting, and
+  publication-quality image generation across user
+  interfaces and operating systems.},
+  publisher = {IEEE COMPUTER SOC},
+  year      = 2007
+}
+
+@Misc{JonesEtal2001scipy,
+  author =    {Eric Jones and Travis Oliphant and Pearu Peterson and others},
+  title =     {{SciPy}: Open source scientific tools for {Python}},
+  year =      {2001},
+  url = "http://www.scipy.org/",
+  note = {[Online; accessed 2017-02-12]}
+}
+
 2011ApJ...742...35N
 @ARTICLE{NymeyerEtal2011apjWASP18b,
    author = {{Nymeyer}, S. and {Harrington}, J. and {Hardy}, R.~A. and {Stevenson}, K.~B. and
@@ -226,4 +287,18 @@ archivePrefix = "arXiv",
       doi = {10.1088/0004-637X/755/1/9},
    adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...755....9S},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{vanderWaltEtal2011numpy,
+author = {St{\'{e}}fan van der Walt and S. Chris Colbert and Ga{\"{e}}l Varoquaux},
+title = {The {NumPy} Array: A Structure for Efficient Numerical Computation},
+journal = {Computing in Science \& Engineering},
+volume = {13},
+number = {},
+issn = {1521-9615},
+year = {2011},
+pages = {22-30},
+doi = {doi.ieeecomputersociety.org/10.1109/MCSE.2011.37},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
 }
