Fixed AAS bibtex.

--- a/template.bib
+++ b/template.bib
@@ -1,6 +1,5 @@
 @misc{AASteam2016aastex61,
-  author       = {AAS Journals Team and
-                  Hendrickson, Amy},
+  author       = {{AAS Journals Team} and {Hendrickson}, A.},
   title        = {AASJournals/AASTeX60: Version 6.1},
   month        = nov,
   year         = 2016,
