--- a/template.tex
+++ b/template.tex
@@ -360,8 +360,8 @@ time and valuable comments.  We thank contributors to Numpy
 \citep{vanderWaltEtal2011numpy}, SciPy \citep{JonesEtal2001scipy},
 Matplotlib \citep{Hunter2007ieeeMatplotlib}, AstroPy
 \citep{Astropy2013aaAstroPy}, and the Python Programming Language; the
-developers of the aastex6.1 latex template \citep{AASteam2016aastex61}
-the free and open-source community; the NASA Astrophysics Data System;
+free and open-source community; the developers of the aastex6.1 latex
+template \citep{AASteam2016aastex61}; the NASA Astrophysics Data System;
 and the JPL Solar System Dynamics group for software and services.
 Part of this work is based on observations made with the {\em Spitzer
   Space Telescope}, which is operated by the Jet Propulsion
