Added article example.

--- a/template.bib
+++ b/template.bib
@@ -147,6 +147,20 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+1917PASP...29..206C
+@ARTICLE{Curtis1917paspIslandUniverseTheory,
+   author = {{Curtis}, H.~D.},
+    title = "{Novae in the Spiral Nebulae and the Island Universe Theory}",
+  journal = {\pasp},
+     year = 1917,
+    month = oct,
+   volume = 29,
+    pages = {206-207},
+      doi = {10.1086/122632},
+   adsurl = {http://adsabs.harvard.edu/abs/1917PASP...29..206C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 2006Sci...314..623H
 @ARTICLE{HarringtonEtal2006sciuandbphas,
    author = {{Harrington}, J. and {Hansen}, B.~M. and {Luszcz}, S.~H. and
@@ -200,7 +214,6 @@ key: reviewed author submitted
   title =     {{SciPy}: Open source scientific tools for {Python}},
   year =      {2001},
   url = "http://www.scipy.org/",
-  note = {[Online; accessed 2017-02-12]}
 }
 
 2011ApJ...742...35N
@@ -224,6 +237,31 @@ archivePrefix = "arXiv",
     pages = {35},
       doi = {10.1088/0004-637X/742/1/35},
    adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...742...35N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+1918ApJ....48..154S
+@ARTICLE{Shapley1918apjDistanceGlobularClusters,
+   author = {{Shapley}, H.},
+    title = "{Studies based on the colors and magnitudes in stellar clusters. VII. The distances, distribution in space, and dimensions of 69 globular clusters.}",
+  journal = {\apj},
+     year = 1918,
+    month = oct,
+   volume = 48,
+      doi = {10.1086/142423},
+   adsurl = {http://adsabs.harvard.edu/abs/1918ApJ....48..154S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+1913LowOB...2...56S
+@ARTICLE{Slipher1913lobAndromedaRarialVelocity,
+   author = {{Slipher}, V.~M.},
+    title = "{The radial velocity of the Andromeda Nebula}",
+  journal = {Lowell Observatory Bulletin},
+     year = 1913,
+   volume = 2,
+    pages = {56-57},
+   adsurl = {http://adsabs.harvard.edu/abs/1913LowOB...2...56S},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
