tweaked article tex.

--- a/article.tex
+++ b/article.tex
@@ -15,7 +15,7 @@ To remove spaces between biblio entries, uncomment this line:
 \verb+\setlength\bibsep{0.0pt}+.
 To show the biblio entries as a continuous bullet-point text,
 uncomment the block after this line:\\
-\verb+Enable this for bullet-point separated references:+
+\verb+Enable this for bullet-point separated references:+\\
 
 
 Lorem Ipsum is simply dummy text of the printing and typesetting
