Updated for aastex6.2.

--- a/template.bib
+++ b/template.bib
@@ -213,7 +213,6 @@ key: reviewed author submitted
   author =    {Eric Jones and Travis Oliphant and Pearu Peterson and others},
   title =     {{SciPy}: Open source scientific tools for {Python}},
   year =      {2001},
-  url = "http://www.scipy.org/",
 }
 
 2011ApJ...742...35N
@@ -240,6 +239,21 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@Article{PerezGranger2007ipython,
+  Author    = {{P\'erez}, F. and {Granger}, B.~E.},
+  Title     = {{IP}ython: a System for Interactive Scientific Computing},
+  Journal   = {Computing in Science and Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {21--29},
+  month     = may,
+  year      = 2007,
+  url       = "http://ipython.org",
+  ISSN      = "1521-9615",
+  doi       = {10.1109/MCSE.2007.53},
+  publisher = {IEEE Computer Society},
+}
+
 1918ApJ....48..154S
 @ARTICLE{Shapley1918apjDistanceGlobularClusters,
    author = {{Shapley}, H.},
@@ -264,7 +278,6 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/1913LowOB...2...56S},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
 2010Natur.464.1161S
 @ARTICLE{StevensonEtal2010natGJ436b,
    author = {{Stevenson}, K.\ B. and {Harrington}, J. and {Nymeyer}, S. and
