--- a/template.tex
+++ b/template.tex
@@ -69,7 +69,7 @@
           techniques: photometric}
 
 
-\section{INTRODUCTION}
+\section{Introduction}
 \label{introduction}
 
 This is an introductory section.  Start with some broad background and,
@@ -85,7 +85,7 @@ example and give some quick grammar lessons.  In Section
 and show a Table example.  Finally, in Section \ref{sec:conclusions}
 we conclude.
 
-\section{OBSERVATIONS}
+\section{Observations}
 \label{sec:observations}
 
 We observed exoplanets, many of them.  Sometimes we deal with theory,
@@ -107,7 +107,7 @@ are generally obtained from
 should be stored in a bibfile (see `bibfile-template.bib').
 
 
-\section{COMPILING LATEX}
+\section{Compiling Latex}
 \label{sec:compile}
 
 To properly compile a latex document that uses bibtex (this one, for
@@ -232,7 +232,7 @@ or between a number and its units: ``our 3 hour Markov-Chain Monte
 Carlo run,'' not ``our 3-hour Markov-Chain Monte-Carlo run.''
 
 
-\section{SCIENCE}
+\section{Science}
 \label{sec:science}
 
 This section gives a scientific interpretation of the analyzed data.
@@ -334,7 +334,7 @@ article).  This can come in handy when preparing proposals.
 Especially for this case, take a look at the \texttt{top-apj.tex} file
 to enable the compact and or bullet-point Refenreces list.
 
-\section{CONCLUSIONS}
+\section{Conclusions}
 \label{sec:conclusions}
 
 These are our conclusions.  Although this example has used a colloquial
@@ -359,7 +359,8 @@ improvements to the paper.  We thank the anonymous referee for his/her
 time and valuable comments.  We thank contributors to Numpy
 \citep{vanderWaltEtal2011numpy}, SciPy \citep{JonesEtal2001scipy},
 Matplotlib \citep{Hunter2007ieeeMatplotlib}, AstroPy
-\citep{Astropy2013aaAstroPy}, and the Python Programming Language; the
+\citep{Astropy2013aaAstroPy}, IPython \citep{PerezGranger2007ipython},
+and the Python Programming Language; the
 free and open-source community; the developers of the aastex6.1 latex
 template \citep{AASteam2016aastex61}; the NASA Astrophysics Data System;
 and the JPL Solar System Dynamics group for software and services.
@@ -378,7 +379,7 @@ article is available at \href{http://tinyurl.com/2fcpre6}
 
 \begin{appendices}
 
-\section{BAYESIAN CREDIBLE REGION}
+\section{Bayesian Credible Region}
 \label{sec:CredRegion}
 
 In the Bayesian context, given the posterior probability density,
