--- a/top-apj.tex
+++ b/top-apj.tex
@@ -8,9 +8,9 @@
 
 % AASTEX61 cls:
 \newcommand\papercls{\aastexcls}
-\documentclass[tighten, times, twocolumn]{aastex61}  % ApJ look-alike
-%\documentclass[tighten, times, trackchanges, twocolumn]{aastex61}
-%\documentclass[tighten, times, manuscript]{aastex61} % Onecolumn, doublespaced
+\documentclass[tighten, times, twocolumn]{aastex62}  % ApJ look-alike
+%\documentclass[tighten, times, trackchanges, twocolumn]{aastex62}
+%\documentclass[tighten, times, manuscript]{aastex62} % Onecolumn, doublespaced
 
 % Emulate ApJ cls:
 %\newcommand\papercls{\apjcls}
@@ -62,7 +62,7 @@
 % Enable this for packed reference list:
 %\setlength\bibsep{0.0pt}
 
-% Enablw this to remove section numbers:
+% Enable this to remove section numbers:
 %\setcounter{secnumdepth}{0}
 
 %% % Enable this for bullet-point separated references:
