--- a/template.bib
+++ b/template.bib
@@ -33,7 +33,7 @@ keywords = {methods: data analysis, methods: miscellaneous, virtual observatory 
      eid = {A33},
    pages = {A33},
      doi = {10.1051/0004-6361/201322068},
-  adsurl = {http://adsabs.harvard.edu/abs/2013A\%26A...558A..33A},
+  adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A},
  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
